--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,17 @@
           </a>
         </li>
         <li>
+          <a href="https://maimai.cn/contact/detail/127130843?fr=&from=webview%23%2Ffeed_list">
+            <span>脉脉</span>
+            <span class="iconfont">
+              <svg width="16px" height="16px" viewBox="0 0 1024 1024">
+              <path
+                d="M512 42.581333l-469.333333 469.333333 31.146667 31.146667L170.666667 446.250667l0 438.186667 682.666667 0L853.333333 446.208l96.853333 96.896 31.146667-31.146667L512 42.581333zM426.666667 841.770667l0-298.666667 170.666667 0 0 298.666667L426.666667 841.770667zM810.666667 841.770667l-170.666667 0 0-341.333333L384 500.437333l0 341.333333L213.333333 841.770667 213.333333 403.584l298.666667-298.666667 298.666667 298.666667L810.666667 841.770667z"></path>
+              </svg>
+            </span>
+          </a>
+        </li>
+        <li>
           <a href="mailto:837769723@qq.com">
             <span class="contact-link">837769723@qq.com</span>
             <span class="iconfont">
@@ -245,7 +256,7 @@
           </div>
           <div class="item">
             <header class="item-hd">
-              <h3 class="item-name">egg-vue-ssr 解放方案 · 前端负责人、独立开发</h3>
+              <h3 class="item-name">egg-vue-ssr 解决方案 · 独立开发</h3>
               <a class="btn item-more">工程化建设</a>
             </header>
             <div class="item-bd">
