--- a/src/index.html
+++ b/src/index.html
@@ -149,6 +149,7 @@
             <header class="item-hd">
               <h3 class="item-name">三维家（广东）</h3>
               <span class="item-time">2018.07 至今</span>
+              <span class="item-time">中级前端开发工程师</span>
               <a class="btn item-more">工作</a>
             </header>
             <div class="item-bd">
