--- a/src/index.html
+++ b/src/index.html
@@ -147,7 +147,7 @@
           <!--经历:工作-->
           <div class="item">
             <header class="item-hd">
-              <h3 class="item-name">三维家（广东）</h3>
+              <h3 class="item-name">三维家（阿里系）</h3>
               <span class="item-time">2018.07 至今</span>
               <span class="item-time">中级前端开发工程师</span>
               <a class="btn item-more">工作</a>
