--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>简历 | 周琳 | 前端开发工程师</title>
+  <title>简历 | 李健锋 | 前端开发工程师 | 本科</title>
   <link rel="stylesheet" href="main?_inline">
   <base target="_blank">
 </head>
 <body>
-<p class="last-modified">最后更新于2019年10月</p>
+<p class="last-modified">最后更新于 2020 年 3 月</p>
 <a class="download-pdf" href="resume.pdf">下载 PDF</a>
 
 <main class="content">
@@ -18,25 +18,25 @@
   <header class="content-hd">
     <section class="title">
       <div class="name">
-        <h1>周琳</h1>
+        <h1>李健锋</h1>
       </div>
       <div class="job">
-        <h2>Web前端开发工程师<span style="font-size: 14px">/广州</span></h2>
+        <h2>Web 前端开发工程师<span style="font-size: 14px">/ 广州</span></h2>
       </div>
     </section>
     <section class="info">
       <ul>
-        <li>男 / 1996.10</li>
-        <li>长沙学院 · 软件工程</li>
-        <li>本科 / 2018年毕业</li>
-        <li>3年前端开发经验 · 2年工作经验</li>
+        <li>男 / 1994.02</li>
+        <li>广东海洋大学 · 轮机工程</li>
+        <li>本科</li>
+        <li>2 年前端开发经验</li>
       </ul>
     </section>
     <section class="contact">
       <ul>
         <li>
-          <a href="https://github.com/anthinkingcoder">
-            <span class="contact-link">Github - anthinkingcoder</span>
+          <a href="https://github.com/bunajianke">
+            <span class="contact-link">Github - bunajianke</span>
             <span class="iconfont">
               <svg width="16px" height="16px" viewBox="0 0 1024 1024">
                 <path
@@ -46,7 +46,7 @@
           </a>
         </li>
         <li>
-          <a href="https://juejin.im/user/5c09e657518825371057ff40">
+          <a href="https://juejin.im/user/5d760e676fb9a06ae17d9e90">
             <span class="contact-link">掘金</span>
             <span class="iconfont">
               <svg width="16px" height="16px" viewBox="0 0 1024 1024">
@@ -56,20 +56,10 @@
             </span>
           </a>
         </li>
+        
         <li>
-          <a href="https://maimai.cn/contact/detail/127130843?fr=&from=webview%23%2Ffeed_list">
-            <span>脉脉</span>
-            <span class="iconfont">
-              <svg width="16px" height="16px" viewBox="0 0 1024 1024">
-              <path
-                d="M512 42.581333l-469.333333 469.333333 31.146667 31.146667L170.666667 446.250667l0 438.186667 682.666667 0L853.333333 446.208l96.853333 96.896 31.146667-31.146667L512 42.581333zM426.666667 841.770667l0-298.666667 170.666667 0 0 298.666667L426.666667 841.770667zM810.666667 841.770667l-170.666667 0 0-341.333333L384 500.437333l0 341.333333L213.333333 841.770667 213.333333 403.584l298.666667-298.666667 298.666667 298.666667L810.666667 841.770667z"></path>
-              </svg>
-            </span>
-          </a>
-        </li>
-        <li>
-          <a href="mailto:837769723@qq.com">
-            <span class="contact-link">837769723@qq.com</span>
+          <a href="mailto:socn_1@163.com">
+            <span class="contact-link">socn_1@163.com</span>
             <span class="iconfont">
               <svg width="16px" height="16px" viewBox="0 0 1024 1024">
                 <path
@@ -79,8 +69,8 @@
           </a>
         </li>
         <li>
-          <a href="tel:15616264296">
-            <span class="contact-link">15616264296</span>
+          <a href="tel:18320304907">
+            <span class="contact-link">183 2030 4907</span>
             <span class="iconfont">
               <svg width="16px" height="16px" viewBox="0 0 1024 1024">
                 <path
@@ -97,42 +87,30 @@
       <section class="skill">
         <header class="section-hd">
           <span class="section-title-l"></span>
-          <h2 class="section-title">专业能力</h2>
+          <h2 class="section-title">能力</h2>
           <span class="section-title-r"></span>
         </header>
         <div class="section-bd">
           <div class="item-bd">
             <ul class="section-content">
               <li>
-                掌握Web前端开发的基本技能， 熟悉前端主流技术栈以及研发体系，熟练运用Vue, 熟悉webpack、scss、ts、es6等主流技术。
+                掌握 Web 前端开发的基本技能， 熟悉前端主流技术栈以及研发体系。
               </li>
               <li>
-                对前端工程化、前端性能、前端安全、数据可视化、服务端渲染有一定的实践和思考。
+                使用 Webpack 定制前端开发环境
+              </li>
+              <li>掌握 Javascript 的新一代标准 es6，紧跟行业动向。</li>
+              <li>
+                接触过后台开发，php，Node(koa2)。
               </li>
               <li>
-                具备后端开发经验，Java，Node(egg), Golang(beego)。
-              </li>
-              <li>
-                具备软件工程学科所需基本素养和能力，熟悉计算机网络、数据结构与算法、设计模式等。
+                使用 uni-app 开发混合应用
               </li>
               <li>
                 热爱技术、热爱开源、热爱分享，有极强的自主学习能力以及积极创新变革的能力。
               </li>
             </ul>
           </div>
-          <!--Nodejs-->
-          <!--<div class="item">-->
-          <!--<header class="item-hd">-->
-          <!--<span class="item-time">Nodejs</span>-->
-          <!--<a class="btn item-more">熟练</a>-->
-          <!--</header>-->
-          <!--<div class="item-bd">-->
-          <!--<ul class="section-content">-->
-          <!--<li>掌握Nodejs标准库及模型，在实际项目中多处使用Nodejs</li>-->
-          <!--<li>用Nodejs开发过服务中间件与其它构建工具</li>-->
-          <!--</ul>-->
-          <!--</div>-->
-          <!--</div>-->
         </div>
       </section>
 
@@ -147,52 +125,45 @@
           <!--经历:工作-->
           <div class="item">
             <header class="item-hd">
-              <h3 class="item-name">三维家（阿里系）</h3>
-              <span class="item-time">2018.07 至今</span>
-              <span class="item-time">中级前端开发工程师</span>
+              <h3 class="item-name">广州微刷支付科技有限公司</h3>
+              <span class="item-time">2019.3 - 至今</span>
               <a class="btn item-more">工作</a>
             </header>
             <div class="item-bd">
-              <p class="item-des">在三维家前端技术部负责大数据业务、paas业务开发、前端工程化建设， 其中包括：</p>
+              <p class="item-des">在前端项目部负责 h5+ 应用开发、前端工程化建设， 其中包括：</p>
               业务上：
               <ul class="section-content">
-                <li>数据大盘：可视化公司核心数据</li>
-                <li>智能BI:  拖拉拽指标生成可视化图表</li>
-                <li>PaaS官网、PaaS工作台、IAM</li>
+                <li>帮助公司开发维护商务平台后台</li>
+                <li>使用 ECharts 开发可视化图表</li>
               </ul>
               <br/>
               技术上：
               <ul class="section-content">
-                <li>egg-vue-ssr 解决方案：基于egg的vue ssr弹性解决方案</li>
-                <li>vue-element-pro: 服务于内部用于搭建企业级应用的解决方案，基于element，功能和ant-design-pro类似 </li>
-                <li><a href="https://github.com/anthinkingcoder/zy-fetch" target="_blank">zy-fetch</a>: 基于 fetch 的 http 请求库</li>
-                <li><a href="https://github.com/anthinkingcoder/egg-keycloak" target="_blank">egg-keycloak</a>: 基于<a href="https://github.com/anthinkingcoder/keycloak-koa-connect">keycloak-koa-connect</a>，用于使用keycloak client服务的egg应用</li>
+                <li>elemen-admin 解决方案：基于 vue 的开箱即用的可定制后台管理框架</li>
               </ul>
             </div>
           </div>
           <div class="item">
             <header class="item-hd">
-              <h3 class="item-name">湖南高阳通联</h3>
-              <span class="item-time">2017.11 至 2018.4</span>
-              <a class="btn item-more">实习</a>
+              <h3 class="item-name">佳美互联网科技</h3>
+              <span class="item-time">2018.8 至 2019.3</span>
+              <a class="btn item-more">工作</a>
             </header>
             <div class="item-bd">
-              <p class="item-des">在高阳通联前端研发中心负责中移和包支付h5页面开发（hybrid app），其中包括</p>
+              <p class="item-des">业务上：</p>
               <ul class="section-content">
-                <li>和包保险</li>
-                <li>和包发票助手</li>
+                <li>佳美官网</li>
+                <li>我要定制</li>
+                <li>微信公众平台网页开发</li> 
               </ul>
             </div>
-          </div>
-          <!--经历:在校-->
-          <div class="item">
-            <header class="item-hd">
-              <h3 class="item-name">易正网络</h3>
-              <span class="item-time">2017.03 ~ 2017.10</span>
-              <a class="btn item-more">在校</a>
-            </header>
             <div class="item-bd">
-              <p class="item-des">在校期间，和工作室的同学一起出来创业，接一些项目来做，我主要负责后端（golang）以及一些前端开发工作。</p>
+              <p class="item-des">技术上：</p>
+              <ul class="section-content">
+                <li>使用 Webpack 打包构建</li>
+                <li>使用 scss 预处理器</li>
+                <li>使用 babel 做向下兼容</li>
+              </ul>
             </div>
           </div>
         </div>
@@ -211,124 +182,91 @@
         <div class="section-bd">
           <div class="item">
             <header class="item-hd">
-              <h3 class="item-name">家居工业云官网 · 研发负责人</h3>
+              <h3 class="item-name">人人刷后台管理系统</h3>
               <a class="btn item-more">业务</a>
             </header>
             <div class="item-bd">
-              三维家工业云平台官网
               <ul>
                 <li>
-                  基于 egg-vue-ssr 解决方案构建的同构应用
+                  基于 element-admin 的解决方案
                 </li>
-                <li>ui库为bootstrap-vue</li>
+                <li>按需引入 element 常用组件，减少打包体积，优化加载速度。</li>
                 <li>
-                  响应式屏幕适配，兼容web、wap两端
+                  响应式屏幕适配，兼容 PC 端各种不同的分辨率
                 </li>
               </ul>
             </div>
-            项目链接：<a href="https://paas.3vjia.com/" target="_blank" alt="三维家家居工业云">https://paas.3vjia.com/</a>
           </div>
           <div class="item">
             <header class="item-hd">
-              <h3 class="item-name">智能BI · 前端负责人</h3>
+              <h3 class="item-name">优利卡混合 App</h3>
               <a class="btn item-more">业务</a>
             </header>
             <div class="item-bd">
-              智能BI是提供给非专业数据分析人员一个简易操作的数据分析平台，其主要功能就是用户可以通过拖拉拽各种指标数据进行统计分析，并将其统计分析得来的数据生成各种可视化图表，进而通过这些生成的图表来搭建一个简易的仪表盘页面
               <ul>
                 <li>
-                  利用RBAC权限模型搭建权限系统，权限粒度可以控制到按钮级别。
+                  利用持久化存储技术，保存用户的登录状态。
                 </li>
-                <li>采用vuedraggable + vue-grid-layout实现数据拖拽以及可动态布局的仪表盘页面。</li>
-                <li>
-                  采用v-chart实现可视化图表，并提供可视化的配置方式，用于对图表做一些简易配置。
-                </li>
-                <li>
-                  采用vuex结合sessionStorage做一层中间缓存，用于临时保存用户在制作图表过程中的操作记录。
-                </li>
-                <li>
-                  采用zy-fetch做前端接口层，zy-fetch是一个简易的fetch请求库。
-                </li>
-                <li>
-                  图表懒加载以及列表虚拟化技术优化海量图表的加载性能
-                </li>
+                <li>UI 框架为 mui</li>
+                <li>使用 HTML5+ 技术，调用手机原生能力，实现拍照上传，应用热更新等功能</li>
               </ul>
             </div>
           </div>
           <div class="item">
             <header class="item-hd">
-              <h3 class="item-name">egg-vue-ssr 解决方案 · 独立开发</h3>
-              <a class="btn item-more">工程化建设</a>
+              <h3 class="item-name">致富钱袋代理商管理小程序</h3>
+              <a class="btn item-more">微信小程序</a>
             </header>
             <div class="item-bd">
-              egg-vue-ssr 是一个服务端渲染应用骨架，它借鉴了优酷狼叔团队出品的 egg-react-ssr 解决方案的部分思路，整个项目都是由我独立负责以及开发。
+              <p class="desc">使用最新的跨平台基于 vue 语法的开发框架 uni-app 开发小程序</p>
               <ul>
                 <li>
-                  利用RBAC权限模型搭建权限系统，权限粒度可以控制到按钮级别。
-                </li>
-                <li>支持SSR/CSR两种渲染模式，智能降级, SSR也支持stream模式(bigpipe)。</li>
-                <li>
-                  支持 SPA SSR、MPA SSR
+                  利用 vuex 状态管理器，全局控制用户权限，保存用户登录信息。
                 </li>
                 <li>
-                  支持本地开发HMR
+                  使用组件嵌套开发无限极菜单，实现多选、全选、反选等功能
                 </li>
-                <li>
-                  利用yeoman搭建脚手架，脚手架支持生成 SPA/MPA 两种应用，以及集成国际化、PWA、CSS预处理器、ui框架
-                </li>
-                <li>
-                  内置seo meta配置
-                </li>
-                <li>
-                  webpack配置没有做黑盒化，方便定制
-                </li>
+                <li>前端生成分享二维码</li>
               </ul>
-              业绩：在三维家家居工业云等多个服务端渲染项目有应用
             </div>
           </div>
           <div class="item">
             <header class="item-hd">
-              <h3 class="item-name">vue-element-pro · 前端负责人</h3>
-              <a class="btn item-more">工程化建设</a>
+              <h3 class="item-name">马尼拉兔小程序</h3>
+              <a class="btn item-more">微信小程序</a>
             </header>
             <div class="item-bd">
-              vue-element-pro 用于帮助后端快速搭建企业级后台管理应用，进一步解放前端生产力。
+              <p class="desc">一款方便菲律宾华人的生活便利小程序</p>
               <ul>
                 <li>
-                  核心布局，需支持顶部导航、侧边栏导航、流式布局、固定布局、响应式
+                  自定义小程序搜索导航栏
                 </li>
-                <li>动态菜单以及权限</li>
-                <li>
-                  在线配置工具
-                </li>
+                <li>左侧分类菜单</li>
                 <li>
                   可复用的组件、页面
                 </li>
               </ul>
-              业绩：在三维家的一些内部管理系统中有大量使用
             </div>
           </div>
-          <!--项目:Nodejs-->
-          <!--<div class="item">-->
-          <!--<header class="item-hd">-->
-          <!--<a class="btn item-more" href="https://nodejs.org">Nodejs</a>-->
-          <!--</header>-->
-          <!--<div class="item-bd">-->
-          <!--<ul>-->
-          <!--<li>-->
-          <!--<a href="https://github.com/gwuhaolin/chrome-render">chrome-render</a>-->
-          <!--基于headless-chrome的通用服务端渲染方案-->
-          <!--</li>-->
-          <!--<li>-->
-          <!--<a href="https://github.com/gwuhaolin/koa-seo">koa-seo</a>-->
-          <!--无侵入式SEO单页应用方案，koa中间件-->
-          <!--</li>-->
-          <!--<li><a href="https://github.com/gwuhaolin/direct-alipay">direct-alipay</a>-->
-          <!--支付宝支付服务Nodejs包-->
-          <!--</li>-->
-          <!--</ul>-->
-          <!--</div>-->
-          <!--</div>-->
+          
+          <div class="item">
+            <header class="item-hd">
+              <h3 class="item-name">骰子天天乐</h3>
+              <a class="btn item-more">微信小程序</a>
+            </header>
+            <div class="item-bd">
+              <p class="desc">一款线上线下互娱的骰子小程序</p>
+              <ul>
+                <li>
+                  丰富可选的骰子皮肤
+                </li>
+                <li>音效、震动和视觉效果完美配合</li>
+                <li>
+                  可复用的组件、页面
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -337,7 +275,7 @@
 </main>
 
 <footer class="github-footer">
-  <a class="footer-link" href="https://github.com/anthinkingcoder/resume">页面托管在Github Pages上</a>
+  <a class="footer-link" href="https://github.com/bunajianke/resume">页面托管在Github Pages上</a>
 </footer>
 </body>
 </html>
